[Inkeet] Adds the logic for taking input from the command line and sends to enrich

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -26,5 +26,15 @@ jobs:
         uses: denoland/setup-deno@v1
         with:
           deno-version: 1.x
-      - name: Run Deno tests
-        run: deno test --allow-all
+      - name: Run Deno tests with coverage
+        run: deno test --allow-all --coverage=coverage
+      - name: Generate coverage report
+        run: deno coverage coverage --lcov --output=coverage/lcov.info
+      - name: Check coverage ratio
+        run: |
+          COVERAGE=$(deno coverage coverage | grep "All files" | awk '{print $4}' | tr -d '%')
+          echo "Coverage: $COVERAGE%"
+          if (( $(echo "$COVERAGE < 85" | bc -l) )); then
+            echo "Coverage is below 85%!" >&2
+            exit 1
+          fi
