--- a/deno.json
+++ b/deno.json
@@ -3,5 +3,10 @@
     "exclude": [
       ".github/"
     ]
+  },
+  "imports": {
+    "@std/assert": "jsr:@std/assert@^1.0.14",
+    "@std/expect": "jsr:@std/expect@^1.0.17",
+    "@std/testing": "jsr:@std/testing@^1.0.15"
   }
 }
