--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Deno
         uses: denoland/setup-deno@v1
         with:
-          deno-version: 1.x
+          deno-version: "v1.x"
       - name: Run Deno lint
         run: deno lint
 
@@ -25,7 +25,7 @@ jobs:
       - name: Set up Deno
         uses: denoland/setup-deno@v1
         with:
-          deno-version: 1.x
+          deno-version: "v1.x"
       - name: Run Deno tests with coverage
         run: deno test --allow-all --coverage=coverage
       - name: Generate coverage report
