--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,13 @@
       ".github/"
     ]
   },
+  "lint": {
+    "rules": {
+      "exclude": ["no-explicit-any"]
+    }
+  },
   "imports": {
+    "@google/generative-ai": "npm:@google/generative-ai@^0.24.1",
     "@std/assert": "jsr:@std/assert@^1.0.14",
     "@std/expect": "jsr:@std/expect@^1.0.17",
     "@std/testing": "jsr:@std/testing@^1.0.15"
